# apscan

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  README.md  TROUBLESHOOTING.md  USAGE.md  apscan.db  check_ports.py  openapi.json  pyproject.toml  scan_report.html  scan_results.json  verify_ui.py
apscan/ai/: base.py  providers.py
apscan/auth/: base.py  providers.py
apscan/cli/: main.py
apscan/core/: context.py  orchestrator.py  request_engine.py  rule.py  workflow.py
apscan/discovery/: curl_loader.py  graphql_loader.py  har_loader.py  list_loader.py  openapi_parser.py  postman_loader.py
apscan/reporting/: base.py  html_report.py  json_report.py  pdf_report.py
apscan/rule_engine/: executor.py  loader.py  matcher.py  yaml_rule.py
apscan/rules/: git_exposed.yaml  graphql.py
apscan/server/: db.py  db_models.py  main.py  manager.py  models.py
apscan/utils/: curl_gen.py  http.py
apscan/workflows/: executor.py  loader.py
custom_plugins/: dummy_rule.py  rule_template.py
tests/: endpoints.txt  login_flow.yaml  mock_api.py  new_rules_targets.txt  test.har  upload_flow.yaml
tests/auth/: test_providers.py
tests/core/: test_context.py  test_orchestrator_auth.py  test_request_engine.py
tests/discovery/: test_openapi_parser.py
tests/reporting/: test_reporters.py
tests/rules/: test_advanced_rules.py  test_cors.py  test_method_tampering.py  test_secrets_dependency.py
tests/server/: test_rule_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
(+30 files in other folders)
